# career-copilot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/ashishkosana/copilot_app/: MainActivity.kt
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: api.dart  auth.dart  config.dart  main.dart  models.dart
backend/: README.md  pyproject.toml
backend/src/copilot/: __init__.py  config.py  logging.py
backend/src/copilot/adapters/: __init__.py  dynamodb_store.py  gmail_mailbox.py  ja_jobsource.py  llm_reply.py
backend/src/copilot/adapters/fixtures/: sample_jobs.json
backend/src/copilot/domain/: __init__.py  briefing.py  models.py  scoring.py  triage.py
backend/src/copilot/handlers/: __init__.py  api.py  cron.py
backend/src/copilot/ports/: __init__.py  jobsource.py  llm.py  mailbox.py  store.py
backend/src/copilot/services/: __init__.py  daily_briefing.py
backend/tests/: conftest.py  test_briefing.py  test_daily_briefing_service.py  test_dynamodb_store.py  test_gmail_mailbox.py  test_handlers.py  test_ja_jobsource.py  test_llm_reply.py  test_models.py  test_scoring.py  test_triage.py
infra/: .gitignore  build-lambda.sh  package-lock.json  package.json
infra/lib/: career-copilot-stack.ts
scripts/: run-local.sh  seed-secrets.sh
src/: requirements.txt
src/career_copilot/: __init__.py  apify.py  auth.py  briefing.py  cli.py  drafts.py  gmail_client.py  jobs.py  lambda_handler.py  response.py  storage.py  triage.py
tests/: test_apify.py  test_helpers.py  test_jobs.py  test_triage.py
