[project]
name = "career-copilot"
version = "0.1.0"
description = "A personal job-search agent: scans your inbox, triages your pipeline, and hands you one daily briefing."
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.2",
]

[project.scripts]
copilot = "career_copilot.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
