[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "career-copilot"
version = "2.0.0"
description = "Personal job-search agent — one daily briefing, on AWS serverless + Google Cloud."
requires-python = ">=3.13"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
]

[project.optional-dependencies]
# Cloud/Google adapters — only imported by the adapter layer, never the domain.
adapters = [
  "boto3>=1.34",
  "google-api-python-client>=2.130",
  "google-auth>=2.30",
  "google-auth-oauthlib>=1.2",
  "google-genai>=1.0",
]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF", "PL"]
ignore = ["PLR0913"]  # allow richer function signatures in orchestration

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]  # magic values in assertions are fine in tests

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
